@@ -1,3 +1,9 @@
+2020-12-19  Pawel Salek  <pawsa0@gmail.com>
+
+    * libbalsa/imap/imap-auth.c: catch errors mid authentication process.
+    * libbalsa/imap/imap-commands.c: simplify CAPABILITY handling
+    to prevent infinite loops.
+
 2020-12-06  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	* meson.build: Define the FORTIFY_SOURCE macro only if the
